# tsuga

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
data/mnist/: README.md
examples/: cifar.rs  conv_012.rs  conv_mnist.rs  fashion_mnist.rs  gpu_train.rs  mnist.rs  sgd.rs  simple_mnist.rs  zeros_ones_and_twos.rs
src/: activation_functions.rs  conv_layer.rs  conv_network.rs  fc_layer.rs  fc_model.rs  fc_network.rs  flatten.rs  fully_connected.rs  layer.rs  lib.rs  linalg_ocl.rs  network.rs  test.rs  test_cl.rs  utils.rs
src/activations/: activation_functions.rs  mod.rs  sigmoid_layer.rs
src/cl/: functions.cl
src/convolution/: conv_layer.rs  hyperparameters.rs  mm_conv_2d.rs  mm_conv_3d.rs  mod.rs  sliding_conv_2d.rs  sliding_conv_3d.rs  test.rs
