[package]
name = "tsuga"
version = "0.1.0"
authors = ["Christopher Moran <christopher.and.moran@gmail.com>"]
edition = "2018"
repository = "https://github.com/quietlychris/tsuga"
readme = "README.md"
license = "MIT"
description = "An early-stage machine learning library for building neural networks in Rust"
keywords = ["machine-learning","machine", "learning", "neural-networks", "neural", "networks"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tsuga"

[dependencies]
ndarray = { version = "0.13", features = ["rayon"] }

ndarray-stats = "0.3"
ndarray-rand = "0.11"
image = "0.23"
imageproc = "0.20"
rand = "0.7"

crossterm = "0.17"
indicatif = "0.15"

serial_test = "0.4"

[dev-dependencies]
mnist = {version = "0.4.1", features=["download"]}
minifb = "0.18"
cifar-10 = {git = "https://github.com/quietlychris/cifar-10", branch = "master"}
