[package]
name = "tsuga"
version = "0.1.1"
authors = ["Christopher Moran <christopher.and.moran@gmail.com>"]
edition = "2018"
repository = "https://github.com/quietlychris/tsuga"
readme = "README.md"
license = "MIT"
description = "An early-stage machine learning library for building neural networks in Rust"
keywords = ["machine-learning", "machine", "learning", "neural-networks", "networks"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tsuga"

[dependencies]
ndarray = { version = "0.14", features = ["rayon"] }

ndarray-stats = "0.4"
ndarray-rand = "0.13"
image = "0.23"
imageproc = "0.22"
rand = "0.8"

crossterm = "0.19"
indicatif = "0.15"

serial_test = "0.5"

[dev-dependencies]
mnist = {version = "0.4.1", features=["download"]}
cifar-ten = {git = "https://github.com/quietlychris/cifar-ten", branch = "master", features = ["download"]}
show-image = {version = "0.6", features = ["image"]}
