[package]
name = "tsuga"
version = "0.2.0"
authors = ["Christopher Moran <christopher.and.moran@gmail.com>"]
edition = "2018"
repository = "https://github.com/quietlychris/tsuga"
readme = "README.md"
license = "MIT"
description = "An early-stage machine learning library for building neural networks in Rust"
keywords = ["machine-learning", "machine", "learning", "neural-networks", "networks"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tsuga"

[dependencies]
ndarray = { version = "0.14", features = ["rayon"] }
ndarray-stats = "0.4"
ndarray-rand = "0.13"
rand = "0.8"

[dev-dependencies]
mnist = {version = "0.4.1", features = ["download"]}
# cifar-ten = {path = "../cifar-ten", features = ["download"]}
cifar-ten = {git = "https://github.com/quietlychris/cifar-ten.git", branch = "master", features = ["download"]}
